--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,9 @@ services:
     volumes:
       - /app/node_modules
       - ./web:/app
+  redis:
+    image: redis:7.0.9
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./cache_data:/data
