--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^1.3.4",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20",
-    "redis": "^4.6.5"
+    "ioredis": "^5.3.1",
+    "moment": "^2.29.4",
+    "nodemon": "^2.0.20"
   }
 }
