--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "ioredis": "^5.3.1",
     "moment": "^2.29.4",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "ws": "^8.12.1"
   }
 }
